--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="save">Save</string>
     <string name="title">Title</string>
     <string name="type_something">Type something…</string>
+    <string name="edit">Edit</string>
 </resources>
