--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title">Title</string>
     <string name="type_something">Type something…</string>
     <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
